# ChangeLog for media-fonts/lfpfonts-var
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/lfpfonts-var/ChangeLog,v 1.15 2007/07/24 02:17:28 dirtyepic Exp $

  24 Jul 2007; Ryan Hill <dirtyepic@gentoo.org>
  -lfpfonts-var-0.83-r2.ebuild:
  Remove old.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  26 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  lfpfonts-var-0.84.ebuild:
  Add ~x86-fbsd keyword, restrict binchecks and strip.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org> lfpfonts-var-0.84.ebuild:
  Mark 0.84 stable on ia64

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org> lfpfonts-var-0.84.ebuild:
  Mark 0.84 stable on alpha

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  lfpfonts-var-0.84.ebuild:
  Stable on ppc.

  15 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  lfpfonts-var-0.84.ebuild:
  Stable on amd64.

  04 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  lfpfonts-var-0.84.ebuild:
  Stable on sparc

  02 Jul 2005; Mamoru KOMACHI <usata@gentoo.org> -lfpfonts-var-0.83.ebuild,
  lfpfonts-var-0.84.ebuild:
  Stable on x86.

*lfpfonts-var-0.84 (29 Sep 2004)

  29 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> -lfpfonts-var-0.83-r1.ebuild,
  lfpfonts-var-0.83.ebuild, +lfpfonts-var-0.84.ebuild:
  Version bumped, closing bug #62727.

  17 Aug 2004; Aron Griffis <agriffis@gentoo.org> lfpfonts-var-0.83-r2.ebuild:
  mark stable everywhere

*lfpfonts-var-0.83-r2 (30 May 2004)

  30 May 2004; foser <foser@gentoo.org> lfpfonts-var-0.83-r2.ebuild :
  Use font eclass

*lfpfonts-var-0.83-r1 (15 May 2004)

  15 May 2004; Mamoru KOMACHI <usata@gentoo.org> lfpfonts-var-0.83-r1.ebuild:
  Changed font path to /usr/share/fonts. Updated HOMEPAGE and SRC_URI. Closing
  bug #44840

*lfpfonts-var-0.83 (02 Jun 2003)

  02 Jun 2003; Seemant Kulleen <seemant@gentoo.org> lfpfonts-var-0.83.ebuild:
  moved to media-fonts
