@@ -1,8 +1,8 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/lfpfonts-var/lfpfonts-var-0.84.ebuild,v 1.9 2006/11/26 23:02:02 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/lfpfonts-var/lfpfonts-var-0.84.ebuild,v 1.10 2007/09/04 02:39:04 dirtyepic Exp $
 
-inherit font
+inherit font font-ebdftopcf
 
 DESCRIPTION="Linux Font Project variable-width fonts"
 HOMEPAGE="http://sourceforge.net/projects/xfonts/"
@@ -13,19 +13,12 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm ia64 ppc s390 sh sparc x86 ~x86-fbsd"
 IUSE=""
 
-S=${WORKDIR}/${PN}-src
+S="${WORKDIR}/${PN}-src"
 
 FONT_SUFFIX="pcf.gz"
+FONT_S="${S}/src"
 
-FONT_S=${S}/lfp-var
-
-DOCS="doc/*"
+DOCS="${S}/doc/*"
 
 # Only installs fonts
 RESTRICT="strip binchecks"
-
-src_compile() {
-	cd ${S}/src
-
-	PATH=".:${PATH}" ./compile || die "converting BDF fonts to PCF failed"
-}
